--- a/SimbirGOSwagger/appsettings.json
+++ b/SimbirGOSwagger/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=5432;Database=simbir;User Id=postgres;Password=Bobik123654"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
